# bots-duel

ml/: Makefile  docker-compose.yaml  pyproject.toml
ml/bots/: 03928878.pt  05883540.pt  10555742.pt  12810258.pt  21600566.pt  24481459.pt  58143823.pt  60711204.pt  79452561.pt  79817573.pt  93531217.pt
ml/src/ml/:  bot.py  agentscache.py  data_types.py  main.py  model.py  supervisor.py  websocket_manager.py
ml/src/ml/__pycache__/: websocket_manager.cpython-313.pyc.4346179440
ml/tests/: test_main.py
web/: package-lock.json  package.json  tsconfig.tsbuildinfo
web/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  prerender-manifest.json  react-loadable-manifest.json  required-server-files.json  trace
web/.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo  chrome-devtools-workspace-uuid
web/.next/server/: app-paths-manifest.json  middleware-react-loadable-manifest.js  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
web/.next/types/: routes.d.ts  validator.ts
web/app/: page.tsx
web/components/: ConnectionStatus.tsx  GameDashboard.tsx  Section.tsx  TournamentCard.tsx
web/contexts/: BotsContext.tsx  TournamentsContext.tsx
web/dots-duel/: next.config.ts  package-lock.json  package.json  tsconfig.json
web/dots-duel/app/: layout.tsx  page.tsx
web/dots-duel/components/: BotPanel.tsx  GameDashboard.tsx  Section.tsx  TournamentCard.tsx
web/dots-duel/contexts/: BotsContext.tsx  TournamentsContext.tsx
web/types/: Bot.ts  Message.ts  Tournament.ts
ws/: Makefile  pyproject.toml
(+96 files in other folders)
