[tool.poetry]
name = "duel-bots"
version = "0.1.0"
description = "FastAPI backend for Bots Duel game with AI bot strategies"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
python-multipart = "^0.0.6"
numpy = "^2.3.2"
torch = "^2.8.0"
websockets = "^12.0"
redis = "^6.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
black = "^23.7.0"
isort = "^5.12.0"
httpx = "^0.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
